--- a/blog-project/src/main/resources/application.properties
+++ b/blog-project/src/main/resources/application.properties
@@ -9,5 +9,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #DB url ??
 spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:h2:mem:testdb
-
+spring.datasource.url=jdbc:h2:mem:testdb;mode=mysql
